src/assets/sass/components/navigation/_navigation.scss
.navbar {
    font-size: size(13);
    position: initial;
    padding: 0 size(30);
    height: size(70);
    background: $color__white;

    .navbar-brand {
        padding: 0.3rem 1rem .3rem 0;
        margin: 0;
        line-height: 0;
        border-right: 1px solid $color__gray100;
    } 
}

.primary-navigation a {
    text-decoration: none;
    color: $color__dark;
    font-size: size(13);
}

.primary-navigation {
    > li a, .nav-item > a {
        padding: 1.48rem 1.5rem;
        display: block;
        position: relative;
        color: $color__dark;

        @include big-desktop-down() {
            padding: 1.57rem .8rem;
        }

        @include desktop-down() {
            padding: .5rem 2rem;
        }

        &:before {
            position: absolute;
            bottom: 0;
            left: 0;
            width: 100%;
            height: 2px;
            background: $primary;
            content: '';
            opacity: 0;
            -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
            -moz-transition: opacity 0.3s, -moz-transform 0.3s;
            transition: opacity 0.3s, transform 0.3s;
            -webkit-transform: translateY(10px);
            -moz-transform: translateY(10px);
            transform: translateY(10px);
        }

        &:focus, &:active {
            outline: none;
        }
    }

    > li.show, 
    > .nav-item.show, 
    > li:hover, 
    > .nav-item:hover {
        > a {
            color: $primary;

            &::before {
                opacity: 1;
                -webkit-transform: translateY(2px);
                -moz-transform: translateY(2px);
                transform: translateY(2px);
            }
        }
    }
    
    li a.active {
        color: $primary;

        &::before {
            opacity: 1;
            -webkit-transform: translateY(2px);
            -moz-transform: translateY(2px);
            transform: translateY(2px);

            @include desktop-down() {
                display: none;
            }
        }
    }
}

li.menu-item-has-children {
    > a:after {
        @extend .icon-font;
        content: "\e90d";
        font-size: size(8);
        color: $color__icon-carpet;
        margin-left: size(5);
        display: inline-block;
        vertical-align: middle;
    }

    &:hover > a:after {
        transform: scaleY(-1);
        color: $primary;
    }
} 

.dropdown-full-width {
    position: absolute;
    width: 100%;
    background: $color__white;
    border-top: 1px solid $color__gray100;
    left: 0;
    z-index: 1;

    ul {
        padding: .8rem 0;
        list-style: none;

        &.flex-column .nav-item a.nav-link {
            padding: .6rem 1rem;
        }

        .btn-link {
            white-space: nowrap;

            &:after {
                margin-left: size(10);
            }
        }
    }

    &:before {
        height: 100%;
        background: #fff;
        z-index: -1; 
    }
}


.fullwidth-nav.show:after {
    content: "";
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background:rgba(0, 0, 0, 0.2);
    z-index: -2;
    height: 100vh;
    pointer-events: none;
}

.menu-profile {
    .profile-icon {
        object-fit: cover;
        height: size(40);
        width: size(40);
        border-radius: 50%;
        border: solid 1px #eaeaea;
    }

    h6 { 
        font-size: size(13);
        margin-bottom: 0;
        max-width: size(140);
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        &:after {
            content: '';
            border-top: 5px solid $color__icon-carpet;
            border-left: 5px solid transparent;
            border-right: 5px solid transparent;
            display: inline-block;
            vertical-align: middle;
            margin-left: 5px;
        }
    }
}

.creatives-overview {
    padding-bottom: size(30);

    .overview-title {
        margin-bottom: size(15);
        h5 {
            font-size: size(14);
        }
        a {
            margin-left: size(15);
        }
    }
    
}

.campaign-overview {
    @extend .creatives-overview;
    padding-bottom: size(150);

    .overview-title {
        margin-bottom: 0;
        p {
            margin-bottom: 0;
            color: $color__table-sectext;
        }
    }

    .overview-detail {
        margin-bottom: size(10);
        li {
            text-align: left;
    
            .number {
                font-size: size(20);
            } 
            .title {
                font-size: size(12);
                margin-bottom: size(5);
            }
        }
    }
}

.icon-notification {
    height: size(20);
    width: size(20);
    margin-right: size(20);
    font-size: size(11);
    border-radius: 50%;
    background-color: #a0a0a0;
    color: $color__white;
    background-repeat: no-repeat;
    background-position: center;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.icon-advertiser {
    margin-right: size(20);
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}



.secondary-menu {
    @include desktop-down() {
        align-items: left !important;
        padding-left: 2rem;
        padding-right: 2rem;
    }
    > li {
        position: relative;
        
        @include desktop-down() {
            flex-wrap: wrap;
            height: initial;
            width: 100%;
        }

        .dropdown-menu { 
            margin: 0 !important;
            padding: 0;
            border: 0;
        }
    
        .dropdown.show {
            .icon-notification { 
                background-color: $primary;
            }
            .icon-advertiser svg path { 
                fill: $primary;
            }
            &:after {
                content: "";
                display: block;
                position: fixed;
                top: 0;
                left: 0;
                width: 100%;
                background: rgba(0, 0, 0, 0.2);
                z-index: -1;
                height: 100vh;
                pointer-events: none;
            }
        }

        .dropdown-toggle {
            padding: size(5) 0;
            height: size(65);
            align-items: center;
            display: flex;
            border: 0;
            background-color: transparent !important;
            border: 0 !important;

            &:after {
                display: none;
            }

            &:hover, &:active, &:focus {
                background-color: transparent !important;
                box-shadow: none !important;
            }
        }
    }

    
}

.show-dropdown-menu .icon-advertiser svg path { 
    fill: $primary;
}

.show-dropdown-menu {
    .dropdown-menu {
        display: block !important;
    }
    &:after {
        content: "";
        display: block;
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        background: rgba(0, 0, 0, 0.2);
        z-index: -1;
        height: 100vh;
        pointer-events: none;
    }
}

.profile-dropdown-menu {
    border: 1px solid $color__gray100 !important;
    width: size(200);
    border-bottom: 0 !important;
    padding: 0;
    list-style: none;

    a {
        font-size: size(13);
        color: #404040;
        display: block;
        padding: .6rem 1.2rem;
        border-bottom: 1px solid $color__gray100 !important;
    }

    &:last-child a {
        border-bottom: 0;
    }

}

.notification-dropdown-menu {
    border: 1px solid $color__gray100;
    background-color: $color__white;
    min-width: size(380);
    padding: 0;
    margin: 0;

    .notification-header {
        font-size: size(13);
        text-transform: uppercase;
        font-weight: 600;
        padding: size(15);
        background-color: $color__white;
        border-bottom: 1px solid $color__gray100;

        .btn-link {
            margin-left: size(15);
        }
    }

    .notifications {
        li.media {
            padding: size(25) size(15) size(15) size(20); 
            border-bottom: 1px solid #f1f1f1;

            h5 {
                font-size: size(12);
                margin-top: 0;
                margin-bottom: size(5);
            }
            p {
                font-size: size(12);
                margin-bottom: size(5);
            }

            &:last-child {
                border-bottom: 0;
            }
        }
    }
}


.br {
    border-right:1px solid $color__gray100;
}

button.navbar-toggler {
    width: 50px;
}

.navbar-collapse {
    @include desktop-down() {
        background: $color__white;
        position: absolute;
        left: 0;
        right: 0px;
        top: 70px;
        border-top: 1px solid #f1f1f1;
        border-bottom: 1px solid #f1f1f1;
    }

    .navbar-nav li {
        &:hover {
            a {
                &:before, &:after {
                    @include desktop-down() {
                        display: none;
                    }
                }
            }
            .dropdown-full-width {
                @include desktop-down() {
                    display: none;
                }
            }
        }
        
        &.menu-item-has-children > a {
            &:before, &:after {
                @include desktop-down() {
                    display: none;
                }
            }
        }
    }
}

.advertiser-dropdown-menu {
    min-width: size(300);
    font-size: size(13);
    max-height: 400px;
    overflow-y: auto;
    border: 1px solid #f3f3f3;

    .list-group-item {
        padding: 1rem 1.25rem;
        border-left: 0;
        border-right: 0;

        &:last-child {
            border: 0;
        }
        &:first-child {
            border-top: 0;
        }

        .search-advitiser {
            position: relative;
            .form-control {
                border: 0;
                padding: 0 30px 0 0;
                height: 20px;
                outline: none;

                &:focus, &:active, &:hover {
                    border: 0;
                    outline: 0 !important;
                    box-shadow: none !important;
                } 
            }
            button {
                border: 0;
                background: none;
                position: absolute;
                top: 50%;
                right: 0;
                transform: translateY(-50%);

                &:focus, &:active, &:hover {
                    border: 0;
                    outline: 0 !important;
                    box-shadow: none !important;
                } 
            }
        }
    }
}

.fullwidth-nav.dropdown.nav-item{
    position: initial;

    .dropdown-menu {
        width: 100%;
        border: 0;
        padding: 0;
        box-shadow: none;
    }

    .dropdown-toggle:hover:after {
        color: $primary;
    }

    &.show {
        .dropdown-toggle:after {
            transform: scaleY(-1);
            color: $primary;
        }
    }

    .dropdown-toggle:after {
        color: initial;
    }
    
}

.btn-link.dropdown-item {
     display: inline-block; 
     width: initial; 
     padding: 0; 

     &:hover, &:active {
         background: none;
     }
}

